--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <title>My Site Title</title>
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <h1>Flatiron's Website</h1>
+        <ul>
+            <li><a href="https://flatironschool.com">Flatiron School</a></li>
+        </ul>
+    </body>
+</html>
